--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '3.0.1'
+    id 'org.springframework.boot' version '3.0.2'
     id 'io.spring.dependency-management' version '1.1.0'
     id 'java'
     id 'jvm-test-suite'
@@ -20,12 +20,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web-services'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'com.h2database:h2:2.1.214'
-    implementation 'org.commonmark:commonmark:0.21.0'
-    implementation 'org.commonmark:commonmark-ext-yaml-front-matter:0.21.0'
     implementation 'org.eclipse.jgit:org.eclipse.jgit:6.4.0.202211300538-r'
     implementation 'org.jetbrains:annotations:23.1.0'
     implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'com.vladsch.flexmark:flexmark-all:0.64.0'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
