Support for SSH git repos.

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,4 +1,4 @@
 logging.level.org.springframework=INFO
 logging.level.root=INFO
-
-blog.url=http://localhost:8080
+git.use-s-s-h=true
+blog.url=http://localhost:8080/
