outputting logs to a file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 logging.level.org.springframework=ERROR
 logging.level.root=ERROR
+logging.file.name=logs/pithy.log
+logging.logback.rollingpolicy.clean-history-on-start=true
 spring.main.banner-mode=off
 
 server.compression.enabled=true
