--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,8 @@ blog.title=Brain-dump, sorry!
 blog.description=A blog about stuff that mostly doesn't need to be on the internet
 blog.language=en-CA
 
+spring.h2.console.enabled=false
+spring.datasource.username=sa
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.defer-datasource-initialization=true
