--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,4 +1,12 @@
-logging.level.org.springframework=INFO
+logging.level.org.springframework=info
 logging.level.root=INFO
+#logging.level.org.springframework.security=DEBUG
 git.use-s-s-h=true
-blog.url=http://localhost:8080/
+
+favicon.faviconFile=/Users/pasdeignan/git/blog/images/favicon.ico
+
+spring.datasource.url=jdbc:h2:file:~/pithy-test
+#spring.sql.init.mode=always
+spring.jpa.generate-ddl=true
+#spring.jpa.defer-datasource-initialization=true
+spring.datasource.password=password
