--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -6,7 +6,11 @@ git.use-s-s-h=true
 favicon.faviconFile=/Users/pasdeignan/git/blog/images/favicon.ico
 
 spring.datasource.url=jdbc:h2:file:~/pithy-test
-#spring.sql.init.mode=always
+spring.sql.init.mode=always
 spring.jpa.generate-ddl=true
 #spring.jpa.defer-datasource-initialization=true
 spring.datasource.password=password
+#spring.datasource.url=jdbc:h2:mem:pithy
+#spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
