safer error checking for initial launch. Still needs a lot of work

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -6,7 +6,7 @@ git.use-s-s-h=true
 favicon.faviconFile=/Users/pasdeignan/git/blog/images/favicon.ico
 
 spring.datasource.url=jdbc:h2:file:~/pithy-test
-spring.sql.init.mode=always
+spring.sql.init.mode=embedded
 spring.jpa.generate-ddl=true
 #spring.jpa.defer-datasource-initialization=true
 spring.datasource.password=password
